# listtech

./: .env  .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  about.hbs  about.toml  docker-compose.yml  third_party_licenses.html  third_party_licenses.md
_proto/: common.proto  indexer.proto  searcher.proto
admin/: Cargo.toml
admin/src/: main.rs
cli/: Cargo.toml
cli/src/: client.rs  display.rs  main.rs  mod.rs  table.rs
core/: Cargo.toml
core/src/swagger/: mod.rs
core/static/swagger-ui/: indexer_index.html  sercher_index.html
core/static/swagger-ui/indexer/: api.swagger.json
corelib/: Cargo.toml  build.rs
corelib/src/: lib.rs
corelib/src/api/: indexer.rs  meta_schema.rs  mod.rs  searcher.rs
corelib/src/api/indexer_model/: document.rs  mod.rs  schema.rs
corelib/src/api/searcher_model/: column.rs  mod.rs
corelib/src/model/: accept.rs  delta_schema.rs  meta_schema.rs  mod.rs  typed_request.rs  typed_response.rs
corelib/src/proto/: common.rs  google.protobuf.rs  indexer.rs  mod.rs  searcher.rs
corelib/src/swagger/: mod.rs
corelib/src/telemetry/: init.rs  mod.rs
corelib/static/swagger-ui/: swagger-initializer.js
corelib/static/swagger-ui/indexer/: api.swagger.json
corelib/static/swagger-ui/searcher/: api.swagger.json
doc/: architecture.md  indexer.md
indexer/: Cargo.toml  build.rs
indexer/proto/: api.proto
indexer/src/: lib.rs  main.rs  schema.rs
indexer/src/api/: document.rs  grpc.rs  grpc_api.rs  grpc_server.rs  http.rs  mapping.rs  mod.rs  reqres.rs  requests.rs  schema.rs  swagger.rs
indexer/src/api/proto/: google.protobuf.rs  indexer.rs
indexer/src/app/: api_server.rs  grpc_server.rs  http_server.rs  mod.rs
indexer/src/domain/: document.rs
indexer/src/indexing/: index_document.rs  index_state.rs  mod.rs  schema.rs
indexer/src/infra/: delta_schema.rs  index.rs  index_registry.rs  index_writer.rs  mod.rs  schema.rs
indexer/src/model/: doc_mapper.rs  mod.rs  req_mapper.rs  typed_response.rs
indexer/tests/: integration.rs  print_schema.rs
scripts/: add_schema.sh  get_schema.sh  print_context.sh  select.sh  update-swagger.sh
scripts/ingest/: Cargo.toml
scripts/ingest/src/: fields_builder.rs  main.rs
searcher/: Cargo.toml  build.rs
searcher/benches/: ram_vs_mmap.rs
searcher/proto/: api.proto
searcher/src/: index.rs  lib.rs  main.rs
searcher/src/api/: field.rs  grpc.rs  mod.rs  req_res.rs  reqres.rs
searcher/src/api/proto/: google.protobuf.rs  mod.rs  searcher.rs
searcher/src/app/: api_server.rs  grpc_server.rs  mod.rs  search_server.rs  swagger_server.rs
searcher/src/domain/: document.rs  index.rs  mod.rs  registry.rs
searcher/src/engine/: mod.rs  query_sql.rs  response.rs  search.rs
searcher/src/engine/virtual_sort/: collector.rs  eval.rs  expr.rs  mod.rs  program.rs
searcher/src/infra/: expr.pest  function_parser.rs  index.rs  index_registry.rs  mod.rs  query_parser.rs  search.rs  virtual_collector.rs
searcher/src/infra/online/: evaluation.rs  mod.rs  parsing.rs  program.rs
searcher/src/model/: mod.rs  req_mapper.rs
searcher/tests/: grpc.rs  search.rs
