[workspace]
members = ["indexer", "searcher", "corelib", "scripts/ingest"]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }      # HTTP-сервер и middleware
hyper = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
include_dir = "0.7"
mime_guess = "2.0"

# gRPC и Protobuf
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

# Логирование и трассировка
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Обработка ошибок
anyhow = "1.0"
thiserror = "2.0"

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11.2"

# Вспомогательные инструменты
dotenvy = "0.15"
tantivy = "0.24.0"
chrono = "0.4.40"
chumsky = "0.10.1"
derive_more = { version = "2.0.1", features = ["full"] }
dashmap = "6.1.0"
tower = "0.5.2"
rand = "0.9.1"

# dev-deps
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
criterion = "0.5"

http = "1.3.1"
http-body-util = "0.1.3"
bytes = "1.10.1"

# [build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"
