[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
corelib = { path = "../corelib" }

tokio = { version = "1.44", features = ["full"] }
tonic = "0.13"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tabled = "0.18"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"
