[package]
name = "corelib"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mime_guess = "2.0"

# Логирование и трассировка
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Обработка ошибок
anyhow = "1.0"
thiserror = "2.0"
