[package]
name = "corelib"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
include_dir.workspace = true
mime_guess.workspace = true
tantivy.workspace = true
derive_more = { workspace = true, features = ["full"] }

bytes.workspace = true
http.workspace = true
http-body-util.workspace = true

# Логирование и трассировка
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Обработка ошибок
anyhow.workspace = true

# Сериализация
serde = { workspace = true }
serde_json.workspace = true
serde_cbor.workspace = true

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"
tokio = { version = "1", features = ["full"] }
