[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Локальные зависимости
corelib = { path = "../corelib" }

# HTTP-сервер и middleware
axum = "0.8"
hyper = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }

# gRPC и Protobuf
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Логирование и трассировка
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Обработка ошибок
anyhow = "1.0"
thiserror = "2.0"

# Вспомогательные инструменты
dotenvy = "0.15"
include_dir = "0.7"
tantivy = "0.24.0"

[lib]
name = "indexer"
path = "src/lib.rs"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"
tokio = { version = "1", features = ["full"] }
