[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Локальные зависимости
corelib = { path = "../corelib" }

# HTTP-сервер и middleware
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }

# Сериализация
serde = { workspace = true }
serde_json.workspace = true
serde_cbor.workspace = true

# Логирование и трассировка
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Обработка ошибок
anyhow = { workspace = true }
thiserror = { workspace = true }

# Вспомогательные инструменты
include_dir = { workspace = true }
dotenvy = { workspace = true }
tantivy = { workspace = true }
async-trait = "0.1.88"
futures-util = "0.3.31"
chrono = "0.4.40"
derive_more = { version = "2.0.1", features = ["full"] }


[lib]
name = "indexer"
path = "src/lib.rs"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"
tokio = { version = "1", features = ["full"] }
# Логирование и трассировка
