[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Локальные зависимости
corelib = { path = "../corelib" }

# HTTP-сервер и middleware
axum = { workspace = true, features = ["macros"] }
hyper = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

# Сериализация
serde = { workspace = true }
serde_json.workspace = true
serde_cbor.workspace = true

# Логирование и трассировка
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Обработка ошибок
anyhow = { workspace = true }
thiserror = { workspace = true }

# Вспомогательные инструменты
include_dir = { workspace = true }
dotenvy = { workspace = true }
tantivy = { workspace = true }
chrono.workspace = true
derive_more = { workspace = true, features = ["full"] }
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
dashmap.workspace = true
tower.workspace = true


[lib]
name = "indexer"
path = "src/lib.rs"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"
tokio = { version = "1", features = ["full"] }
