[package]
name = "searcher"
version = "0.1.0"
edition = "2024"

[dependencies]
# Локальные зависимости
corelib = { path = "../corelib" }

# HTTP-сервер и middleware
axum = "0.8"
hyper = "1"
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }

# gRPC и Protobuf
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Логирование и трассировка
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Обработка ошибок
anyhow = "1.0"
thiserror = "2.0"

# Вспомогательные инструменты
dotenvy = "0.15"
include_dir = "0.7"
tantivy = "0.24.0"
sqlparser = "0.55.0"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
criterion = "0.5"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"
tokio = { version = "1", features = ["full"] }


[[bench]]
name = "ram_vs_mmap"
harness = false
