[package]
name = "searcher"
version = "0.1.0"
edition = "2024"

[dependencies]
# Локальные зависимости
corelib = { path = "../corelib" }

# HTTP-сервер и middleware
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }

# gRPC и Protobuf
tonic = { workspace = true }
prost = { workspace = true }

# Сериализация
serde = { workspace = true }
serde_json.workspace = true
serde_cbor.workspace = true


tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Обработка ошибок
anyhow = { workspace = true }
thiserror = { workspace = true }

# Вспомогательные инструменты
include_dir = { workspace = true }
dotenvy = { workspace = true }
tantivy = { workspace = true }
chrono = "0.4.40"
chumsky = "0.10.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
criterion = "0.5"

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.13"
tokio = { version = "1", features = ["full"] }


# [[bench]]
# name = "ram_vs_mmap"
# harness = false
