[package]
name = "searcher"
version = "0.1.0"
edition = "2024"

[dependencies]
# Локальные зависимости
corelib = { path = "../corelib" }

# HTTP-сервер и middleware
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["trace"] }

# gRPC и Protobuf
tonic = { workspace = true }
prost = { workspace = true }

# Сериализация
serde = { workspace = true }
serde_json.workspace = true
serde_cbor.workspace = true


tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Обработка ошибок
anyhow = { workspace = true }
thiserror = { workspace = true }

# Вспомогательные инструменты
dotenvy = { workspace = true }
tantivy = { workspace = true }
chrono.workspace = true
chumsky.workspace = true
dashmap.workspace = true
tower.workspace = true
indexmap = "2.9.0"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { workspace = true, features = ["net"] }
criterion.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true
tokio = { workspace = true, features = ["full"] }


# [[bench]]
# name = "ram_vs_mmap"
# harness = false
