[package]
name = "ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
corelib = { path = "../../corelib/" }
indexer = { path = "../../indexer/" }
tonic = "0.13"
prost = "0.13"
serde_json = "1"
anyhow = "1.0"
tracing = "0.1"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4.40"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]
