[package]
name = "ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
corelib = { path = "../../corelib/" }
indexer = { path = "../../indexer/" }

tokio = { workspace = true, features = ["full"] }

tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy.workspace = true
chrono.workspace = true

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

anyhow = { workspace = true }
